[package]
name = "miniraft"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0"
futures = "0.3"
tarpc = { version = "0.36", features = ["full"] }
tokio = { version = "1.0", features = ["rt-multi-thread", "net", "macros"] }
serde = { version = "1.0", features = ["derive"] }
log = "0.4.27"
rand = "0.9.1"
